--- a/Códigos/topic_modeling.ipynb
+++ b/Códigos/topic_modeling.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 30,
    "id": "886aa7b0",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "id": "cda8799e",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 32,
    "id": "21399b96",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 33,
    "id": "e4567fb7",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 34,
    "id": "78138bb7",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
        "4  https://web.archive.org/web/20180102104221/htt...     NaN  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 35,
    "id": "5992720d",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "id": "111c791c",
    "metadata": {},
    "outputs": [
@@ -282,13 +282,184 @@
        "Name: Fecha, Length: 13344, dtype: object"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "corpus_completo['Fecha']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "51f4c946",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Limpiar nombres de autores\n",
+    "corpus_completo['Autor'] = corpus_completo['Autor'].str.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "03f38810",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "autores = corpus_completo['Autor'].unique().tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "d7e96833",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "577"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(autores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "601d2904",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "autores = sorted(autores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "a7f6b72c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Abdón Espinosa Valderrama', 'Abel Veiga Copo', 'Adolfo León Atehortúa Cruz', 'Adolfo Meisel Roca', 'Adolfo Zableh Durán', 'Adriana Cooper', 'Adriana La Rotta', 'Adriana Noreña', 'Alberto Donadio', 'Alberto Galán', 'Alberto López de Mesa', 'Aldo Civico', 'Alejandro Alvarado', 'Alejandro Daly', 'Alejandro Peláez', 'Alejandro Reyes Posada', 'Alejandro Riveros González', 'Alejandro Tagliavini', 'Alexánder Cambero', 'Alfonso Carvajal', 'Alfonso Cuéllar', 'Alfonso Gómez Méndez', 'Alfonso Llano Escobar', 'Alfonso Sánchez Cadavid', 'Alfredo Molano Jimeno', 'Alister Ramírez Márquez', 'Allison Benson Hernandez', 'Allison Benson Hernández', 'Alonso Sánchez', 'Alpher Rojas C.', 'Alvaro Forero Tascón', 'Alvaro Jimenez', 'Amadeo Rodríguez Castilla', 'Ana Cristina Restrepo Jiménez', 'Ana Güezmes García', 'Ana Lucía Lenis', 'Ana Margarita González', 'Ana María Córdoba Barahona', 'Ana María Ramírez', 'Ana María Ruiz Perea', 'Ana Milena Muñoz de Gaviria', 'Andrea Aldana', 'Andrea Padilla Villarraga', 'Andrea Parra Triana', 'Andrés Aljure Saab', 'Andrés Candela', 'Andrés Escobar Uribe', 'Andrés Felipe Rodríguez Maldonado', 'Andrés Hoyos', 'Andrés Hurtado García', 'Andrés Marocco', 'Antonio Albiñana', 'Antonio Caballero', 'Antonio Casale', 'Antonio Zuleta González', 'Aníbal Gaviria Correa', 'Ariel Ávila', 'Arlene B. Tickner', 'Armando Montenegro', 'Armando Silva', 'Arturo  Charria', 'Arturo Charria', 'Arturo Guerrero', 'Augusto Solano Mejía', 'Augusto Trujillo Muñoz', 'Aura Lucía Mera', 'Aurelio Suárez Montoya', 'Beatriz Miranda', 'Beatriz Vanegas Athías', 'Bernardo Vargas Gibsone', 'Bjørn Lomborg', 'Brigitte Baptiste', 'Brigitte LG Baptiste', 'Bruce Mac Master', 'Camilo Camargo', 'Camilo Goelkel Medina', 'Camilo Herrera Mora', 'Camilo Sánchez Ortega', 'Carl Bildt', 'Carlos Alberto Leyva', 'Carlos Angulo Galvis', 'Carlos Caballero Argáez', 'Carlos Caicedo', 'Carlos Camargo Assis', 'Carlos Cante', 'Carlos Castillo Cardona', 'Carlos Enrique Moreno', 'Carlos Fernando Galán', 'Carlos Granés', 'Carlos Hernán Godoy Fajardo', 'Carlos Holmes Trujillo', 'Carlos Lozano Acosta', 'Carlos Villalba Bustillo', 'Carolina Botero Cabrera', 'Carolina Sanín', 'Carolina Soto', 'Cartas de los lectores', 'Catalina Martínez Coral', 'Catalina Ruiz-Navarro', 'Catalina Uribe', 'Catalina Uribe Rincón', 'Cecilia Balcázar', 'Cecilia López Montaño', 'Cecilia Orozco Tascón', 'Cecilia Rodríguez', 'Christian Cantor', 'Christoph Harnisch', 'Chucky García', 'Cindy Bautista Vásquez', 'Ciro Rodríguez Pinzón*', 'Clara  López Obregón', 'Clara López Obregon', 'Clara López Obregón', 'Claudia Bermúdez Vélez', 'Claudia Blum', 'Claudia Candela', 'Claudia Dangond-Gibsone', 'Claudia Morales', 'Claudia Palacios', 'Clemencia Carabalí Rodallega', 'Coalición de Acciones por el Cambio.', 'Columna del lector', 'Cristian Valencia', 'Cristina Esguerra Miranda', 'Cristina Vélez', 'Cristina de la Torre', 'Cristo García Tapia', 'César Ferrari', 'César Niño', 'César Rodríguez Garavito', 'Daniel Coronell', 'Daniel Emilio Rojas Castro', 'Daniel García-Peña', 'Daniel Mera Villamizar', 'Daniel Pacheco', 'Daniel Raisbeck', 'Daniel Samper Ospina', 'Danilo Arbilla', 'Danilo Rojas Betancourth', 'Dario Cujar Couttin', 'Darío Acevedo Carmona', 'Darío Cujar', 'Darío Hidalgo', 'David Brooks', 'David Escobar Gómez', 'David Leonhardt', 'David Yanovich', 'Dayana Blanco Acendra', 'Diana Castro Benetti', 'Diana Guarnizo', 'Diana Isabel Güiza Gómez', 'Diego Cancino', 'Diego Molano', 'Diego Santos', 'Dolly Montoya', 'Dolly Montoya Castaño', 'Dominique Moisi', 'Dora Glottman', 'Doña Gula', 'Edgardo José Maya', 'Eduardo Barajas Sandoval', 'Eduardo Behrentz', 'Eduardo Díaz Uribe', 'Eduardo Escobar', 'Eduardo Lora', 'Eduardo Posada Carbó', 'Eduardo Sarmiento', 'Efrén Martínez Ortiz', 'Elisabeth Ungar Bleier', 'Elly Hernández', 'Elsa Lucía Arango', 'Emilio Chala Saad', 'Enrique Aparicio', 'Enrique Gaviria Liévano', 'Enrique Santos Molano', 'Esteban Carlos Mejía', 'Esteban Piedrahita', 'Eva Joly', 'Fabio Martínez', 'Federico Gómez', 'Federico Gómez Lara', 'Felipe Jaramillo', 'Felipe Jánica', 'Felipe Muñoz Gómez', 'Felipe Restrepo Pombo', 'Felipe Zuleta Lleras', 'Fernando Araújo Vélez', 'Fernando Barbosa', 'Fernando Carrillo Flórez', 'Fernando Flórez', 'Fernando Galindo G.', 'Fernando Posada', 'Fernando Quiroz', 'Fernando Sánchez Torres', 'Flavia Santoro', 'Florence Thomas', 'Francisco Barbosa', 'Francisco Cajiao', 'Francisco Gutiérrez Sanín', 'Francisco Leal Buitrago', 'Gabriel Cifuentes Ghidini', 'Gabriel Silva Luján', 'Gazapera', 'Gazapera .', 'Germán Calderón España', 'Germán I. Andrade', 'Germán Manga', 'Germán Vargas G.', 'Germán Vargas Lleras', 'Gloria Alonso', 'Gloria Arias Nieto', 'Gloria Helena Rey', 'Gloria María Borrero', 'Gonzalo Castellanos', 'Gonzalo Hernández', 'Gonzalo Silva Rivas', 'Gral. Néstor Ramírez Mejía', 'Gregory Lobo', 'Guillermo Angulo', 'Guillermo González Uribe', 'Guillermo Maya', 'Guillermo Perry', 'Guillermo Puyana Ramos', 'Guillermo Rivera', 'Guillermo Santos Calderón', 'Guillermo Zuluaga', 'Gustavo Duncan', 'Gustavo Estrada', 'Gustavo Gallón', 'Gustavo Gómez Córdoba', 'Gustavo Páez Escobar', 'Gustavo Riveros Díaz', 'Harry Sasson', 'Heriberto Fiorillo', 'Hernando Gómez Buendía', 'Hernando Herrera Mercado', 'Hernando Roa Suárez', 'Hernando Yepes Arcila', 'Hernán González Rodríguez', 'Hernán Peláez Restrepo', 'Hernán Velandia Palomino', 'Historias en público', 'Hugo Acero Velásquez', 'Hugo Sabogal', 'Humberto de la Calle', 'Héctor Abad Faciolince', 'Héctor Pineda', 'Ignacio Mantilla', 'Ignacio Zuleta', 'Ignacio Zuleta Ll.', 'Ilma Cecilia Ariza de Ávila', 'Indalecio Dangond B.', 'Isabel Jaramillo', 'Isabel Segovia', 'Isabella Portilla', 'Iván Cepeda Castro', 'Iván Duque', 'Iván Mejía Álvarez', 'J J Ocampo', 'J. D. Torres Duarte', 'J. William Pearl', 'Jaime A. Fajardo Landaeta', 'Jaime Arocha', 'Jaime Castro', 'Jaime Laserna Serna', 'Jairo Gómez', 'Jairo Hernán Ortega', 'Javier Alexander Borda Diaz', 'Javier Borda Diaz', 'Javier Ortiz', 'Jeffrey D. Sachs', 'Jennifer Pedraza', 'Jesús Pérez González-Rubio', 'Jhon Jairo Losada Cubillos', 'Jineth Bedoya', 'Joaquín Botero', 'Joaquín Robles Zabala', 'Joaquín Vélez Navarro', 'John Mario González', 'John Petter Opdahl', 'John Sudarsky', 'Johnattan García Ruiz', 'Jorge Barraza', 'Jorge Bustamante', 'Jorge Eduardo Cock', 'Jorge Eduardo Espinosa', 'Jorge Gómez Pinilla', 'Jorge H. Botero', 'Jorge Hernando Nieto', 'Jorge Hernán Colmenares', 'Jorge Iván Cuervo R.', 'Jorge Iván Grisales Marín', 'Jorge Leyva Valenzuela', 'Jorge Tovar', 'Jose Manuel Restrepo', 'Joseph E. Stiglitz', 'José Alberto Peroza', 'José Antonio Llorente', 'José Antonio Ocampo', 'José Darwin Lenis Mejía', 'José Fernando Flórez', 'José Fernando Isaza', 'José Graziando da Silva', 'José Luis Ramírez León', 'José Manuel Acevedo', 'José Manuel Restrepo', 'José Miguel Alzate', 'José Miguel Orozco Muñoz', 'José Miguel Vivanco', 'José Roberto Acosta', 'Jotamario Arbeláez', 'Juan Carlos Botero', 'Juan Carlos Echeverry', 'Juan Carlos Gómez', 'Juan Carlos Holguín', 'Juan Carlos Matamoros López', 'Juan Carlos Mira', 'Juan Carlos Ortiz', 'Juan Carlos Pinzón', 'Juan Carlos Rincón Escalante', 'Juan David Ochoa', 'Juan David Zuloaga D.', 'Juan Esteban Constaín', 'Juan Felipe Carrillo Gáfaro', 'Juan Fernando Cristo', 'Juan Fernando Londoño', 'Juan Francisco Ortega', 'Juan Gabriel Gómez', 'Juan Horacio de Freitas De Sousa', 'Juan Lozano', 'Juan Manuel Charry Ureña', 'Juan Manuel Morales Calderón', 'Juan Manuel Ospina', 'Juan Manuel Palacios Luna', 'Juan Martín Caicedo Ferrer', 'Juan Pablo Calvás', 'Juan Pablo Córdoba Garcés', 'Juan Pablo Ruiz Soto', 'Juan Pablo Salazar', 'Juan Ramón Samper', 'Juan Sebastián Rozo', 'Juan carlos Ureta', 'Juana Téllez', 'Juanita Goebertus Estrada', 'Juliana Pungiluppi', 'Juliana Vargas', 'Juliana Vargas Leal', 'Julio Berdegue Silva Saravia', 'Julio Berdegué \\nElizabeth Coble', 'Julio Carrizosa Umaña', 'Julio César Londoño', 'Julio Londoño Paredes', 'Julián Alfredo Fernández', 'Julián Estrada Ochoa', 'Julián López de Mesa Samudio', 'Julián de Zubiría Samper', 'Kai Ambos', 'Kai Amos', 'La columna bicentenaria', 'Lariza Pizano', 'Laura Chinchilla', 'Laura Gil', 'Laura Rojas Aponte', 'Leonardo Fabio Martínez Pérez', 'Leopoldo Villar Borda', 'Leyner Mosquera', 'Lisandro Duque Naranjo', 'Lorenzo Acosta Valencia', 'Lorenzo Madrigal', 'Lucas Pombo', 'Lucy Nieto de Samper', 'Luis Alberto Ordóñez', 'Luis Camilo Osorio', 'Luis Carlos Reyes', 'Luis Carlos Villegas', 'Luis Carlos Vélez', 'Luis Carvajal Basto', 'Luis F. Samper', 'Luis Felipe Henao', 'Luis Fernando Ospina Vanegas', 'Luis Guillermo Ordóñez', 'Luis Guillermo Plata', 'Luis I. Sandoval M.', 'Luis Noé Ochoa', 'Madame Papita', 'Manue Guzmán Hennessey', 'Manuel Drezner', 'Manuel Guzmán Hennessey', 'Manuel Maiguashca', 'Manuel Rodríguez Becerra', 'Mar Candela', 'Marc Hofstetter', 'Marcela Abadía Cubillos', 'Marcela Sánchez Buitrago', 'Marcelo Caruso A.', 'Marco Sermoneta', 'Marco Tulio Gutiérrez Morad', 'Marcos Peckel', 'Marcos Silva', 'Margarita Cabello Blanco', 'Margarita Flórez', 'Margarita Pacheco', 'Margarita Posada', 'Margarita Rosa de Francisco', 'Mariana Garcés Córdoba', 'Mariana Jaramillo Thomas', 'Mariana Pinto Alvarez', 'Mario Fernando Prado', 'Mario Morales', 'Mario Méndez', 'Mario Valencia', 'Marius Dragomir', 'Mark Leonard', 'Marta Lucía Ramírez', 'Martha Senn', 'Martín Caparrós', 'Martín Jaramillo', 'Mary Louise Higgins', 'María A. García de la Torre', 'María Alejandra Medina Cartagena', 'María Antonieta Solórzano', 'María Claudia Espíndola', 'María Claudia García', 'María Emma Mejía', 'María Eugenia Rinaudo', 'María Fernanda Nossa', 'María Isabel Gómez', 'María Isabel Rueda', 'María Luisa Martínez Dibarboure', 'María Paula Saffon', 'María Piedad Villaveces', 'María Teresa Aya Smitmans', 'María Teresa Ronderos', 'María Victoria Angulo', 'María Ximena Dávila C.', 'Maureen Dowd', 'Mauricio Botero Caicedo', 'Mauricio Carradini', 'Mauricio Cárdenas Santamaría', 'Mauricio García Villegas', 'Mauricio González Cuervo', 'Mauricio Laurens - Cine al Ojo', 'Mauricio Lloreda', 'Mauricio Pombo', 'Mauricio Rodríguez', 'Mauricio Rodríguez Múnera', 'Mauricio Rubio', 'Mauricio Vargas', 'Melba Escobar', 'Michelle Arévalo Zuleta', 'Miguel Ceballos', 'Miguel Silva', 'Miguelángel Epeeyüi López-H.', 'Moisés Naím', 'Moisés Wasserman', 'Nancy Patricia Gutiérrez', 'Nelson Camilo Sánchez', 'Ngaire Woods', 'Nicholas D. Kristof', 'Nicholas Kristof - The New York Times', 'Nicolás Guillot', 'Nicolás Rodríguez', 'Nicolás Uribe Rueda', 'Nicolás Ávila Venegas', 'Nidia Quintero', 'Nilson Pinilla', 'Nohora Adriana Rodríguez Forero', 'Norman Mesa Lopera', 'Nouriel Roubini', 'Olga Lucía Barona', 'Oscar Guardiola-Rivera', 'Otros columnistas', 'Pablo Catatumbo', 'Pablo Felipe Robledo', 'Pablo Leyva', 'Pablo Navas', 'Pablo Ramírez Uribe', 'Pablo Zuloaga', 'Paola Ochoa', 'Para Serle Franco', 'Para serle franco', 'Pascual Gaviria', 'Patricia Lara Salive', 'Patricia Suárez', 'Paul Krugman', 'Paula Moreno', 'Pedro Javier Rojas Guevara', 'Pedro Shaio', 'Pedro Vaca', 'Pedro Viveros', 'Peter Singer', 'Piedad Bonnett', 'Plinio Apuleyo Mendoza', 'Poly Martínez', 'Poncho Rentería', 'Proyect Syndicate /\\xa0Richard N. Haass', 'Rafael Aubad l.', 'Rafael Guarín', 'Rafael Orduz', 'Ramiro Bejarano Guzmán', 'Ramiro Guzmán Arteaga', 'Ramsés Vargas Lamadrid', 'Raquel Coronell Uribe', 'Reinaldo Spitaletta', 'Renson Said', 'Renson Said Sepúlveda Vergara', 'Ricardo Bada', 'Ricardo Silva Romero', 'Rodrigo Janiot y Brian Winter', 'Rodrigo Lozano Vila', 'Rodrigo Uprimny', 'Rubén Mendoza', 'Rudolf Hommes', 'Saia Vergara Jaime', 'Salomón Kalmanovitz', 'Salud Hernández-Mora', 'Salvo Basile', 'Sandra Borda Guzmán', 'Santiago Gamboa', 'Santiago Montenegro', 'Santiago Vargas Acebedo', 'Santiago Villa', 'Sara Tufano', 'Saúl Franco', 'Saúl Hernández Bolívar', 'Sergio  Otálora Montenegro', 'Sergio Bueno', 'Sergio Clavijo', 'Sergio Muñoz Bata', 'Sergio Ocampo Madrid', 'Sergio Otálora Montenegro', 'Sergio Ramírez', 'Sonia Gómez Gómez', 'Soraya Constante', 'Sorayda Peguero', 'Stefano Farné', 'Sylvia Constaín', 'Tatiana Acevedo Guerrero', 'Thierry Ways', 'Thomas L. Friedman', 'Tola y Maruja', 'Una paz entre dos desinteresados', 'Uriel Ortiz Soto', 'Valentina Coccia', 'Vanessa Rosales A.', 'Vicky Turbay', 'Vivian Newman', 'Viviana Krsticevic', 'Vladdo', 'Víctor Corcoba Herrero', 'Víctor Manuel Muñoz Rodríguez', 'Víctor Manuel Ruiz', 'Víctor Muñoz', 'Víctor de Currea-Lugo', 'Waira Nina Jacanamijoy Mutumbajoy', 'Weildler Guerra', 'Werner Zitzmann', 'William Ospina', 'Women in Connection', 'Ximena Casas', 'Yesid Arteta', 'Yesid Reyes Alvarado', 'Yohir Akerman', 'Yoko Ruiz', 'Yolanda Reyes', 'Yolanda Ruiz', 'Yu Yongding', 'Álvaro Guillermo Rendón López', 'Álvaro Jiménez', 'Álvaro Restrepo', 'Ángela María Giraldo', 'Óscar A. Alfonso R', 'Óscar Alarcón', 'Óscar Domínguez Giraldo', 'Óscar Rodrigo Campo Hurtado', 'Óscar Sevillano', 'Óscar Sánchez']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(autores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "54f9880e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Contar palabras totales en la columna 'Texto'\n",
+    "num_palabras = corpus_completo['Texto'].apply(lambda x: len(str(x).split()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "893aec2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8377770"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_palabras.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8d8c805a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Contar palabras distintas en la columna 'Texto'\n",
+    "num_palabras_distintas = corpus_completo['Texto'].apply(lambda x: len(set(str(x).split())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "810260a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4638067"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_palabras_distintas.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "88827a38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    13344.000000\n",
+       "mean       627.830486\n",
+       "std        210.698741\n",
+       "min        128.000000\n",
+       "25%        523.000000\n",
+       "50%        590.000000\n",
+       "75%        682.000000\n",
+       "max       5305.000000\n",
+       "Name: Texto, dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_palabras.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e8cf86d",
+   "metadata": {},
+   "source": [
+    "https://spacy.io/models/es"
    ]
   },
   {
@@ -317,14 +488,6 @@
    ],
    "source": [
     "!python -m spacy download es_core_news_md"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4e8cf86d",
-   "metadata": {},
-   "source": [
-    "https://spacy.io/models/es"
    ]
   },
   {
