--- a/Códigos/topic_modeling.ipynb
+++ b/Códigos/topic_modeling.ipynb
@@ -11,24 +11,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "886aa7b0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hola, mundo!\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Hola, mundo!\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "6f63b7e6",
    "metadata": {},
@@ -38,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "cda8799e",
    "metadata": {},
    "outputs": [],
@@ -62,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "21399b96",
    "metadata": {},
    "outputs": [],
@@ -73,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "e4567fb7",
    "metadata": {},
    "outputs": [],
@@ -92,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "78138bb7",
    "metadata": {},
    "outputs": [
@@ -211,7 +193,7 @@
        "4  https://web.archive.org/web/20180102104221/htt...     NaN  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "5992720d",
    "metadata": {},
    "outputs": [],
@@ -260,40 +242,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "111c791c",
+   "cell_type": "markdown",
+   "id": "61e51075",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        30 de diciembre de 2017\n",
-       "1        30 de diciembre de 2017\n",
-       "2             1 de enero de 2018\n",
-       "3             1 de enero de 2018\n",
-       "4             1 de enero de 2018\n",
-       "                  ...           \n",
-       "13339    25 de diciembre de 2018\n",
-       "13340    26 de diciembre de 2018\n",
-       "13341    26 de diciembre de 2018\n",
-       "13342    27 de diciembre de 2018\n",
-       "13343    28 de diciembre de 2018\n",
-       "Name: Fecha, Length: 13344, dtype: object"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "corpus_completo['Fecha']"
+    "# Descripción Corpus"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "id": "51f4c946",
    "metadata": {},
    "outputs": [],
@@ -304,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "03f38810",
    "metadata": {},
    "outputs": [],
@@ -314,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "d7e96833",
    "metadata": {},
    "outputs": [
@@ -324,7 +282,7 @@
        "577"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "id": "601d2904",
    "metadata": {},
    "outputs": [],
@@ -345,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "a7f6b72c",
    "metadata": {},
    "outputs": [
@@ -363,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "id": "54f9880e",
    "metadata": {},
    "outputs": [],
@@ -374,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "893aec2f",
    "metadata": {},
    "outputs": [
@@ -384,7 +342,7 @@
        "8377770"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,18 +353,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "id": "8d8c805a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Contar palabras distintas en la columna 'Texto'\n",
-    "num_palabras_distintas = corpus_completo['Texto'].apply(lambda x: len(set(str(x).split())))"
+    "texto_unido = ' '.join(corpus_completo['Texto'].dropna().astype(str).tolist())\n",
+    "palabras_distintas = set(texto_unido.split())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
+   "id": "bcea2751",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "336045"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(palabras_distintas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "810260a3",
    "metadata": {},
    "outputs": [
@@ -421,9 +401,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "num_palabras_distintas.sum()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -452,6 +430,14 @@
    ],
    "source": [
     "num_palabras.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "380805c2",
+   "metadata": {},
+   "source": [
+    "# Preprocesamiento"
    ]
   },
   {
