--- a/Códigos/topic_modeling.ipynb
+++ b/Códigos/topic_modeling.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 150,
    "id": "cda8799e",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 151,
    "id": "21399b96",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 152,
    "id": "e4567fb7",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 153,
    "id": "78138bb7",
    "metadata": {},
    "outputs": [
@@ -105,95 +105,89 @@
        "      <th>Título</th>\n",
        "      <th>Texto</th>\n",
        "      <th>Vínculo</th>\n",
-       "      <th>Diario</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>El Espectador</td>\n",
-       "      <td>Alberto Donadio</td>\n",
-       "      <td>30 de diciembre de 2017</td>\n",
-       "      <td>César Gaviria y César Mondragón</td>\n",
-       "      <td>César Gaviria y César Mondragón son expresiden...</td>\n",
-       "      <td>https://web.archive.org/web/20180101101206/htt...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>El Espectador</td>\n",
-       "      <td>Antonio Casale</td>\n",
-       "      <td>30 de diciembre de 2017</td>\n",
-       "      <td>Más recomendaciones de fin de año</td>\n",
-       "      <td>Un libro y dos documentales imperdibles para e...</td>\n",
-       "      <td>https://web.archive.org/web/20180101101206/htt...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>El Espectador</td>\n",
        "      <td>Gonzalo Hernández</td>\n",
        "      <td>1 de enero de 2018</td>\n",
        "      <td>Fajardo: para nada tibio</td>\n",
        "      <td>La Coalición Colombia Partido Alianza Verde, ...</td>\n",
        "      <td>https://web.archive.org/web/20180102104221/htt...</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>1</th>\n",
        "      <td>El Espectador</td>\n",
        "      <td>Eduardo Barajas Sandoval</td>\n",
        "      <td>1 de enero de 2018</td>\n",
        "      <td>Macedonia de Norte</td>\n",
        "      <td>Las interpretaciones de la historia sirven com...</td>\n",
        "      <td>https://web.archive.org/web/20180102104221/htt...</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>2</th>\n",
        "      <td>El Espectador</td>\n",
        "      <td>Daniel Emilio Rojas Castro</td>\n",
        "      <td>1 de enero de 2018</td>\n",
        "      <td>El nacionalismo según Vargas Llosa</td>\n",
        "      <td>La semana pasada Mario Vargas Llosa publicó un...</td>\n",
        "      <td>https://web.archive.org/web/20180102104221/htt...</td>\n",
-       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>El Espectador</td>\n",
+       "      <td>Reinaldo Spitaletta</td>\n",
+       "      <td>1 de enero de 2018</td>\n",
+       "      <td>Tiempo sagrado, tiempo profano</td>\n",
+       "      <td>Pudiera decirse, sin ser una verdad absoluta, ...</td>\n",
+       "      <td>https://web.archive.org/web/20180102104221/htt...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>El Espectador</td>\n",
+       "      <td>Aura Lucía Mera</td>\n",
+       "      <td>1 de enero de 2018</td>\n",
+       "      <td>La rebelión de los bueyes</td>\n",
+       "      <td>Lo mejor del encierro de Las Ventas fueron los...</td>\n",
+       "      <td>https://web.archive.org/web/20180102104221/htt...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Diario                       Autor                    Fecha  \\\n",
-       "0  El Espectador             Alberto Donadio  30 de diciembre de 2017   \n",
-       "1  El Espectador              Antonio Casale  30 de diciembre de 2017   \n",
-       "2  El Espectador           Gonzalo Hernández       1 de enero de 2018   \n",
-       "3  El Espectador    Eduardo Barajas Sandoval       1 de enero de 2018   \n",
-       "4  El Espectador  Daniel Emilio Rojas Castro       1 de enero de 2018   \n",
+       "          Diario                       Autor               Fecha  \\\n",
+       "0  El Espectador           Gonzalo Hernández  1 de enero de 2018   \n",
+       "1  El Espectador    Eduardo Barajas Sandoval  1 de enero de 2018   \n",
+       "2  El Espectador  Daniel Emilio Rojas Castro  1 de enero de 2018   \n",
+       "3  El Espectador         Reinaldo Spitaletta  1 de enero de 2018   \n",
+       "4  El Espectador             Aura Lucía Mera  1 de enero de 2018   \n",
        "\n",
        "                               Título  \\\n",
-       "0     César Gaviria y César Mondragón   \n",
-       "1   Más recomendaciones de fin de año   \n",
-       "2            Fajardo: para nada tibio   \n",
-       "3                  Macedonia de Norte   \n",
-       "4  El nacionalismo según Vargas Llosa   \n",
+       "0            Fajardo: para nada tibio   \n",
+       "1                  Macedonia de Norte   \n",
+       "2  El nacionalismo según Vargas Llosa   \n",
+       "3      Tiempo sagrado, tiempo profano   \n",
+       "4           La rebelión de los bueyes   \n",
        "\n",
        "                                               Texto  \\\n",
-       "0  César Gaviria y César Mondragón son expresiden...   \n",
-       "1  Un libro y dos documentales imperdibles para e...   \n",
-       "2  La Coalición Colombia Partido Alianza Verde, ...   \n",
-       "3  Las interpretaciones de la historia sirven com...   \n",
-       "4  La semana pasada Mario Vargas Llosa publicó un...   \n",
+       "0  La Coalición Colombia Partido Alianza Verde, ...   \n",
+       "1  Las interpretaciones de la historia sirven com...   \n",
+       "2  La semana pasada Mario Vargas Llosa publicó un...   \n",
+       "3  Pudiera decirse, sin ser una verdad absoluta, ...   \n",
+       "4  Lo mejor del encierro de Las Ventas fueron los...   \n",
        "\n",
-       "                                             Vínculo Diario   \n",
-       "0  https://web.archive.org/web/20180101101206/htt...     NaN  \n",
-       "1  https://web.archive.org/web/20180101101206/htt...     NaN  \n",
-       "2  https://web.archive.org/web/20180102104221/htt...     NaN  \n",
-       "3  https://web.archive.org/web/20180102104221/htt...     NaN  \n",
-       "4  https://web.archive.org/web/20180102104221/htt...     NaN  "
+       "                                             Vínculo  \n",
+       "0  https://web.archive.org/web/20180102104221/htt...  \n",
+       "1  https://web.archive.org/web/20180102104221/htt...  \n",
+       "2  https://web.archive.org/web/20180102104221/htt...  \n",
+       "3  https://web.archive.org/web/20180102104221/htt...  \n",
+       "4  https://web.archive.org/web/20180102104221/htt...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +202,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 154,
+   "id": "5c97687c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Limpiar espacios en blanco al inicio y al final de las cadenas\n",
+    "corpus_completo = corpus_completo.apply(lambda x: x.str.strip() if x.dtype == \"object\" else x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
    "id": "5992720d",
    "metadata": {},
    "outputs": [],
@@ -237,8 +242,8 @@
     "    año = partes[2]\n",
     "    return f\"{dia}/{mes}/{año}\"  # Formato DD/MM/AAAA\n",
     "\n",
-    "corpus_completo['fecha_formateada'] = corpus_completo['Fecha'].apply(convertir_fecha)\n",
-    "corpus_completo['fecha_formateada'] = pd.to_datetime(corpus_completo['fecha_formateada'], format='%d/%m/%Y', errors='coerce')"
+    "corpus_completo['Fecha_formateada'] = corpus_completo['Fecha'].apply(convertir_fecha)\n",
+    "corpus_completo['Fecha_formateada'] = pd.to_datetime(corpus_completo['Fecha_formateada'], format='%d/%m/%Y', errors='coerce')"
    ]
   },
   {
@@ -251,18 +256,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "51f4c946",
+   "execution_count": 156,
+   "id": "cc5b6e25",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Diario</th>\n",
+       "      <th>Autor</th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>Título</th>\n",
+       "      <th>Texto</th>\n",
+       "      <th>Vínculo</th>\n",
+       "      <th>Fecha_formateada</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Diario, Autor, Fecha, Título, Texto, Vínculo, Fecha_formateada]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Limpiar nombres de autores\n",
-    "corpus_completo['Autor'] = corpus_completo['Autor'].str.strip()"
+    "# filas que tienen fecha inválida\n",
+    "fechas_invalidas = corpus_completo[corpus_completo['Fecha_formateada'].isna()]\n",
+    "fechas_invalidas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 157,
    "id": "03f38810",
    "metadata": {},
    "outputs": [],
@@ -272,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 187,
    "id": "d7e96833",
    "metadata": {},
    "outputs": [
@@ -282,7 +334,7 @@
        "577"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 159,
    "id": "601d2904",
    "metadata": {},
    "outputs": [],
@@ -303,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 160,
    "id": "a7f6b72c",
    "metadata": {},
    "outputs": [
@@ -321,7 +373,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 184,
+   "id": "9ef809f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3666"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Contar filas \n",
+    "len(corpus_completo[(corpus_completo['Fecha_formateada'] < pd.to_datetime('2019-01-01'))])\n",
+    "\n",
+    "\n",
+    "len(corpus_completo.query(\"Fecha_formateada < '2021-01-01' and Fecha_formateada > '2019-12-31' and Diario == 'El Tiempo'\"))\n",
+    "len(corpus_completo.query(\"Fecha_formateada < '2020-01-01' and Fecha_formateada > '2018-12-31'\"))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "719fa79e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13342"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
    "id": "54f9880e",
    "metadata": {},
    "outputs": [],
@@ -383,25 +482,6 @@
    "source": [
     "len(palabras_distintas)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "810260a3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4638067"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
