--- a/Códigos/topic_modeling.ipynb
+++ b/Códigos/topic_modeling.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 1,
    "id": "cda8799e",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 2,
    "id": "21399b96",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "id": "e4567fb7",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "id": "78138bb7",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "4  https://web.archive.org/web/20180102104221/htt...  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "id": "5c97687c",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "id": "5992720d",
    "metadata": {},
    "outputs": [],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "id": "cc5b6e25",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "id": "03f38810",
    "metadata": {},
    "outputs": [],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "id": "d7e96833",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
        "577"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 10,
    "id": "601d2904",
    "metadata": {},
    "outputs": [],
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 11,
    "id": "a7f6b72c",
    "metadata": {},
    "outputs": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 12,
    "id": "9ef809f0",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
        "13342"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 13,
    "id": "719fa79e",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
        "245"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 14,
    "id": "54f9880e",
    "metadata": {},
    "outputs": [],
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 15,
    "id": "893aec2f",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
        "8376957"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 16,
    "id": "88827a38",
    "metadata": {},
    "outputs": [
@@ -477,7 +477,7 @@
        "Name: Texto, dtype: float64"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 17,
    "id": "19113e30",
    "metadata": {},
    "outputs": [
@@ -586,7 +586,7 @@
        "Semana         2256.0  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 18,
    "id": "8d8c805a",
    "metadata": {},
    "outputs": [],
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 19,
    "id": "bcea2751",
    "metadata": {},
    "outputs": [
@@ -619,7 +619,7 @@
        "336020"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 20,
    "id": "e6484b07",
    "metadata": {},
    "outputs": [
@@ -1042,7 +1042,7 @@
        "2020-12-31           367    367    367     366    367      367"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,6 +1050,215 @@
    "source": [
     "corpus_completo.groupby(pd.Grouper(key='Fecha_formateada', axis=0, freq='ME')).count()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a0265f82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Diario</th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>Título</th>\n",
+       "      <th>Texto</th>\n",
+       "      <th>Vínculo</th>\n",
+       "      <th>Fecha_formateada</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Autor</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Abdón Espinosa Valderrama</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Abel Veiga Copo</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adolfo León Atehortúa Cruz</th>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adolfo Meisel Roca</th>\n",
+       "      <td>37</td>\n",
+       "      <td>37</td>\n",
+       "      <td>37</td>\n",
+       "      <td>37</td>\n",
+       "      <td>37</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adolfo Zableh Durán</th>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Óscar Alarcón</th>\n",
+       "      <td>110</td>\n",
+       "      <td>110</td>\n",
+       "      <td>110</td>\n",
+       "      <td>110</td>\n",
+       "      <td>110</td>\n",
+       "      <td>110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Óscar Domínguez Giraldo</th>\n",
+       "      <td>21</td>\n",
+       "      <td>21</td>\n",
+       "      <td>21</td>\n",
+       "      <td>21</td>\n",
+       "      <td>21</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Óscar Rodrigo Campo Hurtado</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Óscar Sevillano</th>\n",
+       "      <td>116</td>\n",
+       "      <td>116</td>\n",
+       "      <td>116</td>\n",
+       "      <td>116</td>\n",
+       "      <td>116</td>\n",
+       "      <td>116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Óscar Sánchez</th>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>577 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             Diario  Fecha  Título  Texto  Vínculo  \\\n",
+       "Autor                                                                \n",
+       "Abdón Espinosa Valderrama         2      2       2      2        2   \n",
+       "Abel Veiga Copo                   5      5       5      5        5   \n",
+       "Adolfo León Atehortúa Cruz       11     11      11     11       11   \n",
+       "Adolfo Meisel Roca               37     37      37     37       37   \n",
+       "Adolfo Zableh Durán              53     53      53     53       53   \n",
+       "...                             ...    ...     ...    ...      ...   \n",
+       "Óscar Alarcón                   110    110     110    110      110   \n",
+       "Óscar Domínguez Giraldo          21     21      21     21       21   \n",
+       "Óscar Rodrigo Campo Hurtado       1      1       1      1        1   \n",
+       "Óscar Sevillano                 116    116     116    116      116   \n",
+       "Óscar Sánchez                    11     11      11     11       11   \n",
+       "\n",
+       "                             Fecha_formateada  \n",
+       "Autor                                          \n",
+       "Abdón Espinosa Valderrama                   2  \n",
+       "Abel Veiga Copo                             5  \n",
+       "Adolfo León Atehortúa Cruz                 11  \n",
+       "Adolfo Meisel Roca                         37  \n",
+       "Adolfo Zableh Durán                        53  \n",
+       "...                                       ...  \n",
+       "Óscar Alarcón                             110  \n",
+       "Óscar Domínguez Giraldo                    21  \n",
+       "Óscar Rodrigo Campo Hurtado                 1  \n",
+       "Óscar Sevillano                           116  \n",
+       "Óscar Sánchez                              11  \n",
+       "\n",
+       "[577 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corpus_completo.groupby('Autor').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "574cdb2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hola', 'mundo.']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
