--- a/Códigos/topic_modeling.ipynb
+++ b/Códigos/topic_modeling.ipynb
@@ -1053,188 +1053,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "a0265f82",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Diario</th>\n",
-       "      <th>Fecha</th>\n",
-       "      <th>Título</th>\n",
-       "      <th>Texto</th>\n",
-       "      <th>Vínculo</th>\n",
-       "      <th>Fecha_formateada</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Autor</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Abdón Espinosa Valderrama</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Abel Veiga Copo</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Adolfo León Atehortúa Cruz</th>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Adolfo Meisel Roca</th>\n",
-       "      <td>37</td>\n",
-       "      <td>37</td>\n",
-       "      <td>37</td>\n",
-       "      <td>37</td>\n",
-       "      <td>37</td>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Adolfo Zableh Durán</th>\n",
-       "      <td>53</td>\n",
-       "      <td>53</td>\n",
-       "      <td>53</td>\n",
-       "      <td>53</td>\n",
-       "      <td>53</td>\n",
-       "      <td>53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Óscar Alarcón</th>\n",
-       "      <td>110</td>\n",
-       "      <td>110</td>\n",
-       "      <td>110</td>\n",
-       "      <td>110</td>\n",
-       "      <td>110</td>\n",
-       "      <td>110</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Óscar Domínguez Giraldo</th>\n",
-       "      <td>21</td>\n",
-       "      <td>21</td>\n",
-       "      <td>21</td>\n",
-       "      <td>21</td>\n",
-       "      <td>21</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Óscar Rodrigo Campo Hurtado</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Óscar Sevillano</th>\n",
-       "      <td>116</td>\n",
-       "      <td>116</td>\n",
-       "      <td>116</td>\n",
-       "      <td>116</td>\n",
-       "      <td>116</td>\n",
-       "      <td>116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Óscar Sánchez</th>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>577 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                             Diario  Fecha  Título  Texto  Vínculo  \\\n",
-       "Autor                                                                \n",
-       "Abdón Espinosa Valderrama         2      2       2      2        2   \n",
-       "Abel Veiga Copo                   5      5       5      5        5   \n",
-       "Adolfo León Atehortúa Cruz       11     11      11     11       11   \n",
-       "Adolfo Meisel Roca               37     37      37     37       37   \n",
-       "Adolfo Zableh Durán              53     53      53     53       53   \n",
-       "...                             ...    ...     ...    ...      ...   \n",
-       "Óscar Alarcón                   110    110     110    110      110   \n",
-       "Óscar Domínguez Giraldo          21     21      21     21       21   \n",
-       "Óscar Rodrigo Campo Hurtado       1      1       1      1        1   \n",
-       "Óscar Sevillano                 116    116     116    116      116   \n",
-       "Óscar Sánchez                    11     11      11     11       11   \n",
-       "\n",
-       "                             Fecha_formateada  \n",
-       "Autor                                          \n",
-       "Abdón Espinosa Valderrama                   2  \n",
-       "Abel Veiga Copo                             5  \n",
-       "Adolfo León Atehortúa Cruz                 11  \n",
-       "Adolfo Meisel Roca                         37  \n",
-       "Adolfo Zableh Durán                        53  \n",
-       "...                                       ...  \n",
-       "Óscar Alarcón                             110  \n",
-       "Óscar Domínguez Giraldo                    21  \n",
-       "Óscar Rodrigo Campo Hurtado                 1  \n",
-       "Óscar Sevillano                           116  \n",
-       "Óscar Sánchez                              11  \n",
-       "\n",
-       "[577 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'corpus_completo' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m corpus_completo\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAutor\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mcount()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'corpus_completo' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1246,18 +1078,7 @@
    "execution_count": null,
    "id": "574cdb2b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['hola', 'mundo.']"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -1729,19 +1550,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "id": "a3e978b8",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pyLDAvis' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m vis_data \u001b[38;5;241m=\u001b[39m pyLDAvis\u001b[38;5;241m.\u001b[39mlda_model\u001b[38;5;241m.\u001b[39mprepare(lda, matriz_columnas, tfidf_vectorizer)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Guardar como HTML y abrir en navegador\u001b[39;00m\n\u001b[0;32m      4\u001b[0m pyLDAvis\u001b[38;5;241m.\u001b[39msave_html(vis_data, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlda_visualization.html\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pyLDAvis' is not defined"
+     ]
     }
    ],
    "source": [
