--- a/Códigos/busquedas_tesauros.ipynb
+++ b/Códigos/busquedas_tesauros.ipynb
@@ -10,7 +10,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
+   "id": "a8997d13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  error: subprocess-exited-with-error\n",
+      "  \n",
+      "  × Building wheel for annoy (pyproject.toml) did not run successfully.\n",
+      "  │ exit code: 1\n",
+      "  ╰─> [12 lines of output]\n",
+      "      C:\\Users\\karen\\AppData\\Local\\Temp\\pip-build-env-xvucecg6\\overlay\\Lib\\site-packages\\setuptools\\_distutils\\dist.py:289: UserWarning: Unknown distribution option: 'tests_require'\n",
+      "        warnings.warn(msg)\n",
+      "      running bdist_wheel\n",
+      "      running build\n",
+      "      running build_py\n",
+      "      creating build\\lib.win-amd64-cpython-312\\annoy\n",
+      "      copying annoy\\__init__.py -> build\\lib.win-amd64-cpython-312\\annoy\n",
+      "      copying annoy\\__init__.pyi -> build\\lib.win-amd64-cpython-312\\annoy\n",
+      "      copying annoy\\py.typed -> build\\lib.win-amd64-cpython-312\\annoy\n",
+      "      running build_ext\n",
+      "      building 'annoy.annoylib' extension\n",
+      "      error: Microsoft Visual C++ 14.0 or greater is required. Get it with \"Microsoft C++ Build Tools\": https://visualstudio.microsoft.com/visual-cpp-build-tools/\n",
+      "      [end of output]\n",
+      "  \n",
+      "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "  ERROR: Failed building wheel for annoy\n",
+      "ERROR: ERROR: Failed to build installable wheels for some pyproject.toml based projects (annoy)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install --use-pep517 neofuzz --quiet\n",
+    "#%pip install neofuzz --quiet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "95b4da7a",
    "metadata": {},
    "outputs": [],
@@ -326,8 +373,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "84ae33b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prueba = corpus_completo['Texto'].iloc[0].split('\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f1612060",
    "metadata": {},
    "outputs": [
     {
@@ -344,13 +401,47 @@
        " 'Profesor asociado de Economía y director de Investigación de la Pontificia Universidad Javeriana (http://www.javeriana.edu.co/blogs/gonzalohernandez/)']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "corpus_completo['Texto'].iloc[0].split('\\n\\n')"
+    "prueba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "19601321",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'neofuzz'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mneofuzz\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m char_ngram_process\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Some corpus of strings you want to search in.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m options: List[\u001b[38;5;28mstr\u001b[39m] \u001b[38;5;241m=\u001b[39m prueba\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'neofuzz'"
+     ]
+    }
+   ],
+   "source": [
+    "from neofuzz import char_ngram_process\n",
+    "\n",
+    "# Some corpus of strings you want to search in.\n",
+    "options: List[str] = prueba\n",
+    "\n",
+    "# Create a process\n",
+    "process = char_ngram_process()\n",
+    "\n",
+    "# Index the options, so that searches can be fast\n",
+    "process.index(options)\n",
+    "\n",
+    "# Then you can use the process the same way as in TheFuzz\n",
+    "process.extract(\"Sergio\", limit=10)"
    ]
   },
   {
