--- a/Códigos/NER.ipynb
+++ b/Códigos/NER.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "a80ced8e",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "4c05fc99",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "c415ecc8",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9536b466",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
        "4  https://web.archive.org/web/20180102104221/htt...   5  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "8d483bb2",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "8c9ec229",
    "metadata": {},
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "54165c6c",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
        "'La Coalición Colombia –Partido Alianza Verde, Polo Democrático Alternativo y Compromiso Ciudadano- presentó por fin a Sergio Fajardo como su candidato único a la Presidencia. \\n\\nFajardo diagnostica a Colombia como un país fracturado, indignado por la corrupción, despistado por no tener una agenda de desarrollo clara luego del boom minero energético, y “desambientado” en referencia al manejo de los recursos ambientales (http://sergiofajardo.co/).\\n\\nPromete un liderazgo hacia la reconciliación, una lucha intensa contra la corrupción y mejor educación como mecanismo para el fomento de una sociedad innovadora y emprendedora que pueda usar eficientemente sus capacidades. Reconoce abiertamente que la desigualdad -a nivel de las personas y de las regiones- es un obstáculo grande para una Colombia incluyente.\\n\\nLa energía y el énfasis de sus presentaciones sobre su visión del país inspiran y al mismo tiempo lo exponen, en ciertas ocasiones, a críticas por no presentar los detalles. En su más reciente entrevista en RCN Radio se vio contra las cuerdas. Tuvo que enfrentar acusaciones por su aparente tibieza y dio respuestas evasivas, en especial cuando se le preguntó si existía un acuerdo esencial con Jorge Enrique Robledo sobre el tema económico.\\n\\nEsto no debe, sin embargo, generar confusiones que lleven a caricaturizar a Fajardo con los sofismas tan apreciados por los promotores de la propaganda política vacía. Fajardo y su coalición han lanzado ya varias propuestas prácticas que incluso se convierten en dardos afilados que hieren los intereses de diversos grupos. Fajardo se ha atrevido a correr el riesgo de asumir un posible costo electoral que pocos asumen.\\n\\nManifestó su respeto a los acuerdos con las Farc. Anunció que no promete disminuciones de impuestos. Dijo que propenderá por una Dian fortalecida, pero no con el fin de justificar la promesa floja de que con un eventual recaudo más eficiente en el futuro se valida desde ya un desmonte de la carga tributaria. Cuestionó la más reciente reforma tributaria y descalificó su aparente tinte estructural. La base programática de su coalición plantea que propondrán una estructura de impuestos más progresiva -que ponga a pagar más a quienes más tienen- y el desmonte general de beneficios tributarios. Fajardo ha dicho que así como en su momento la sociedad colombiana asumió el impuesto para financiar la guerra tendrá que pagar ahora el impuesto para financiar la educación. En materia ambiental, promete, por ejemplo, instaurar una moratoria en la explotación tipo fracking. Y frente al álgido tema pensional, se ha mostrado a favor del aumento de la edad de jubilación como parte de una futura reforma. Nada tibio diría yo.\\n\\nPor supuesto, a este plan le faltan no uno sino dos hervores. Y tendrá que hervir en medio del frenetismo del sprint presidencial. Tienen que conectar y aterrizar las ideas para que el programa de gobierno de la coalición no quede débil y fracturado.\\n\\nMucho trabajo por delante para que Fajardo pueda hilar todos los cabos que, de quedar sueltos, pueden enredarle el camino en la fase de los debates. Mucho trabajo pedagógico por delante para convencer a un electorado que, por cuenta de la polarización, está acostumbrado a ver las cosas muy en blanco y negro.\\n\\nProfesor asociado de Economía y director de Investigación de la Pontificia Universidad Javeriana (http://www.javeriana.edu.co/blogs/gonzalohernandez/)'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1819,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "9e6ff985",
    "metadata": {},
    "outputs": [
@@ -1837,14 +1837,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "c019ba11",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc4c81c6dfab42c4aada55705e6a3bca",
+       "model_id": "c62120304ec24389b565cf186653e1b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1873,27 +1873,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "28ca5c6b",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\karen\\anaconda3\\Lib\\site-packages\\gliner\\data_processing\\processor.py:351: UserWarning: Sentence of length 408 has been truncated to 384\n",
+      "  warnings.warn(f\"Sentence of length {len(tokens)} has been truncated to {max_len}\")\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nicanor Parra => persona\n",
-      "antipoemas => obra_de_arte\n",
-      "Perón => persona\n",
-      "Getúlio Vargas => persona\n",
-      "Carlos Ibáñez => persona\n",
-      "Allende => persona\n",
-      "Pagu => persona\n"
+      "García Márquez => escritor\n",
+      "Aracataca => lugar\n",
+      "Macondo => lugar_literario\n",
+      "Faulkner => persona\n",
+      "Yoknapatawpha => obra_de_arte\n",
+      "Nicolás Ricardo Márquez Mejía => persona\n",
+      "Aracataca => lugar\n",
+      "Jorge Eliécer Gaitán => persona\n",
+      "Cámara de Representantes => organizacion\n",
+      "Aracataca => lugar\n",
+      "United Fruit Company => organizacion\n",
+      "García Márquez => escritor\n",
+      "Plinio Apuleyo Mendoza => persona\n",
+      "El olor de la guayaba => obra_de_arte\n"
      ]
     }
    ],
    "source": [
     "text = corpus_completo['Texto'][164]\n",
-    "text = corpus_completo['Texto'][4143]\n",
+    "#text = corpus_completo['Texto'][4143]\n",
     "\n",
     "labels = [\"persona\", \"organizacion\", \"lugar\", \"obra_de_arte\", \"lugar_literario\", \"escritor\", \"otra\"]\n",
     "entities = model.predict_entities(text, labels, threshold=0.5)\n",
@@ -1905,18 +1920,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "38c823f1",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\karen\\anaconda3\\Lib\\site-packages\\gliner\\data_processing\\processor.py:351: UserWarning: Sentence of length 601 has been truncated to 384\n",
-      "  warnings.warn(f\"Sentence of length {len(tokens)} has been truncated to {max_len}\")\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
